# vision-language-model-validation

./: .env.example  .gitignore  README.md  pyproject.toml  run.sh
app/: server.py
app/static/: index.html
samples/: invoice_schema.json
vlm/: __init__.py  base.py  device.py  registry.py
vlm/runners/: lift_runner.py  smolvlm_runner.py
